2003-02-08  Masatake YAMATO  <yamato@redhat.com>

	* HACKING: Write about ACLOCAL_FLAGS.

2003-02-03  Martin Weber <martweb@gmx.net>

	* main.c: Now images are dumped as ppm or pgm.

2003-01-30  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (INCLUDES): Added GLIB2_CFLAGS.
	(autotrace_LDADD): Added GLIB2_LIBS and POPT_LIBS.

	* configure.in: Added scripts to check popt and its sanity.
	Added scripts to check glib2.

2003-01-24  Martin Weber <martweb@gmx.net>

	*** libautotrace API is a bit changed ***

	* despeckle.[c,h], main.c, fit.c, autotrace.[c,h]: Added a new
	  parameter to the despeckle filter.

	* despeckle.txt: Added an explanation about the despeckle filter.
  	
	* patchestoming02a.txt: Patches for Ming 0.2a from Wolfgang Glunz to
	  improve the swf export.

2003-01-24  Masatake YAMATO  <yamato@redhat.com>

	* configure.in (AUTOTRACE_VERSION): AC_SUBST for
	autotrace.spec.in.
	$VERSION is deleted from AC_DEFINE_UNQUOTED.

2003-01-23  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.spec.in: Import
	Dag Wieers <dag@wieers.com>'s better spec file.

2003-01-23  Masatake YAMATO  <yamato@redhat.com>

	Copied from sodipodi.
	
	* distro, tools-version.sh: New files.
	distro comes from distro-0.8.1(http://distro.pipfield.ca/).
	distro and tools-version.sh should be included only in CVS version
	of sodipodi.
	
	* autogen.sh: Call tools-version.sh.

2003-01-23  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Added the dummy 2nd arg(1) to AC_DEFINE.

	* Makefile.am (SUBDIRS): Added m4. intl is removed.

	* acconfig.h: use AUTOTRACE_VERSION instead of VERSION.
	See my change at 2002-12-19. I forgot commiting.
	
	* configure.in: Added the 3rd argument for AC_DEFINE_UNQUOTED.
	Added the 2nd added for AC_DEFINE.
	Set, define, and subst GETTEXT_PACKAGE.
	Use AC_CHECK_LIB instead of AC_CHECK_FUNC to check gettext.
	Added m4/Makefile to AC_OUTPUT. Removed intl/Makefile to AC_OUTPUT.
	Use AUTOTRACE_VERSION instead of VERSION.
	